--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <body>
+        <div class="top-header">
+            <h1>Blog Title</h1>
+            <div class="nav-container">
+               <a href="">About</a>
+               <a href="">Home</a>
+               <a href="">Top Picks</a>
+               <a href="">Recents</a>
+               <a href="">FAQs</a>
+            </div>
+        </div>
+        <div class="homepage-content">
+            <div class=book1>
+                <img src="https://m.media-amazon.com/images/I/81EVFgsl3jL._UF1000,1000_QL80_.jpg">
+            </div>
+            <div class="book2">
+                <img src="https://m.media-amazon.com/images/I/61SZH1+PalL._AC_UF1000,1000_QL80_.jpg">
+            </div>
+            <div class="book3">
+                <img src="https://m.media-amazon.com/images/I/71kdiN5Y1YL._AC_UF1000,1000_QL80_.jpg">
+            </div>
+        </div>
+        <div class="book-titles">
+            <div class="book1-title">
+                <p>The Seven Year Slip</p>
+                <p>Ashley Poston</p>
+            </div> 
+            <div class="book2-title">
+                <p>Just Kids</p>
+                <p>Patti Smith</p>
+            </div>
+            <div class="book3-title">
+                <p>Beach Read</p>
+                <p>Emily Henry</p>
+            </div>
+        </div>
+        <style>
+            
+        </style>
+    </body>
+</html>
