--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <link rel="icon" type="image/png"
+        href="file:///Users/juliannapadilla/Desktop/favicon.ico"/>
+        <title>Julianna's BookClub</title>
+    </head>
     <body>
+        <main>
         <div class="top-header">
-            <h1>Blog Title</h1>
+            <h1>Julianna's BookClub</h1>
             <div class="nav-container">
                <a href="">About</a>
                <a href="">Home</a>
@@ -37,7 +43,53 @@
             </div>
         </div>
         <style>
-            
+           main {
+            background-color:#F6EEE4;
+            background-size: cover;
+           } 
+           .nav-container {
+            background-color:#F6EEE4;
+            text-align: center;
+            color: #8C7263;
+            text-align: center;
+            font-family: "Libre Baskerville";
+            font-size: 30px;
+            font-style: normal;
+            line-height: 2;
+           }
+           .top-header {
+            color: #8C7263;
+            background-color:#F6EEE4;
+            text-align: center;
+            font-family: "Libre Baskerville";
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 0;
+           }
+           img {
+            margin: 1;
+             width: 200px;
+             height: 300px;
+             align-content: center;
+             flex-flow: row;
+            justify-content: space-evenly;
+           }  
+           .homepage-content {
+            flex-flow: row;
+            justify-content: space-evenly;
+           }
+           .book-titles {
+            color: #8C7263;
+            text-align: center;
+            font-family: "Libre Baskerville";
+            font-size: 20px;
+            font-style: normal;
+            line-height: normal;
+            flex-flow: row;
+            justify-content: space-evenly;
+           }
         </style>
+        </main>
     </body>
 </html>
