--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             justify-content: space-evenly;
            }  
            .homepage-content {
-            flex-flow: row;
+            flex-flow: column;
             justify-content: space-evenly;
            }
            .book-titles {
@@ -87,6 +87,10 @@
             font-style: normal;
             line-height: normal;
             flex-flow: row;
+            justify-content: space-evenly;
+           }
+           .book1, .book2, .book3 {
+            flex-flow: column;
             justify-content: space-evenly;
            }
         </style>
