--- a/recent-reads.html
+++ b/recent-reads.html
@@ -1,1 +1,82 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="icon" type="image/png"
+        href="file:///Users/juliannapadilla/Desktop/favicon.ico"/>
+        <title>Julianna's BookClub</title>
+    </head>
+    <body>
+        <main>
+        <div class="top-header">
+            <h1>Julianna's BookClub</h1>
+            <div class="nav-container">
+               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/index.html">Contact</a>
+               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/index.html">Home</a>
+               <a href="https://www.goodreads.com/user/show/152230441-julianna">GoodReads</a>
+               <a href="/Users/juliannapadilla/Desktop/miniproject-3/about.html">About</a>
+               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/recent-reads.html">Recent Reads</a>
+            </div>
+        </div>
+        <p>All the books I've read in 2024!</p>
+        <ul class="list">
+            <li>Wild Love - Elsie Silver</li>
+            <li>Archer's Voice - Mia Sheridan</li>
+            <li>Consider Me - Becka Mack</li>
+            <li>Wildfire - Hannah Grace</li>
+            <li>Love Unwritten</li>
+            <li>Funny Story - Emily Henry</li>
+            <li>Collide - Bal Khabra</li>
+            <li>Just for the Summer - Abby Jimenez</li>
+            <li>Rally - Devney Perry</li>
+            <li>Love,Theoretically - Ali Hazelwood</li>
+            <li>Play Along - Liz Tomforde</li>
+            <li>The Seven Year Slip - Ashley Poston</li>
+            <li>Wild Eyes - Elsie Silver</li>
+             <li>Daydream - Hannah Grace</li>
+             <li>The Striker - Ana Huang</li>
+             <li>Life's Too Short - Abby Jimenez</li>
+             <li>Lost and Lassoed - Lyla Sage</li>
+             <li>Unsteady - Peyton Corrine</li>
+        </ul>
+        <p>Reviews coming soon!</p>
+        <style>
+        main {
+            background-color:#F6EEE4;
+            background-size: cover;
+            width: 100%;
+            height: 100vh;
+           } 
+           .nav-container {
+            background-color:#F6EEE4;
+            text-align: center;
+            color: #8C7263;
+            text-align: center;
+            font-family: "Libre Baskerville";
+            font-size: 20px;
+            font-style: normal;
+            line-height: 2;
+            border: 2px solid #8C7263;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+           }
+           a {
+            color: #8C7263;
+           }
+           li {
+            color: #92B496;
+           }
+           p {
+            color: #8C7263;
+           }
+           .top-header {
+            color: #8C7263;
+            background-color:#F6EEE4;
+            text-align: center;
+            font-family: "Libre Baskerville";
+            font-size: 30px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 0;
+           }
+           </style>
