--- a/about.html
+++ b/about.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="icon" type="image/png"
+        href="file:///Users/juliannapadilla/Desktop/favicon.ico"/>
+        <title>Julianna's BookClub</title>
+    </head>
+    <body>
+        <main>
+        <div class="top-header">
+            <h1>Julianna's BookClub</h1>
+            <div class="nav-container">
+               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/index.html">Contact</a>
+               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/index.html">Home</a>
+               <a href="https://www.goodreads.com/user/show/152230441-julianna">GoodReads</a>
+               <a href="/Users/juliannapadilla/Desktop/miniproject-3/about.html">About</a>
+               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/recent-reads.html">Recent Reads</a>
+            </div>
+            <div class="image"
+            <img src=""> 
+            </div>
+            <p> Hi! I'm Julianna, an avid reader and fangirl.
+                I'm from New York City and spend most of my time 
+                at hockey games, concerts, or at my local bookstore. </p>
+            <p>
+                When I’m not trying to catch up with my never-
+                ending reading list or thinking about my favorite book
+                boyfriend, I’m probably scrolling through Pinterest.  </p>
 
+            <p> Listen to my reading playlist!</p>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1jT0wKWChMvKEO2eidv2ae?utm_source=generator" width="75%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+            </iframe>
+            <style>
+                main {
+                    background-color:#F6EEE4;
+                    background-size: cover;
+                    width: 100%;
+                    height: 100vh;
+                   } 
+                   .nav-container {
+                    background-color:#F6EEE4;
+                    text-align: center;
+                    color: #8C7263;
+                    text-align: center;
+                    font-family: "Libre Baskerville";
+                    font-size: 20px;
+                    font-style: normal;
+                    line-height: 2;
+                    border: 2px solid #8C7263;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+                   }
+                   a {
+                    color: #8C7263;
+                   }
+                   .top-header {
+                    color: #8C7263;
+                    background-color:#F6EEE4;
+                    text-align: center;
+                    font-family: "Libre Baskerville";
+                    font-size: 30px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 0;
+                   }
+                   a:hover {
+            color: #F6EEE4;
+           }
+           p {
+            color: #92B496;
+            line-height: 1;
+            text-align: center;
+            font-family: "Libre Baskerville";
+            font-size: 25px;
+           }
+           iframe {
+            justify-content: center;
+           }
+                   </style>
+        </div>
