--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
         </div>
         <H2>  What I've been reading... </H2>
         <div class="images-box">
-            <div class="images-container">
-                <img alt="book1" src="https://m.media-amazon.com/images/I/81EVFgsl3jL._UF1000,1000_QL80_.jpg">
-                <img alt="book2" src="https://m.media-amazon.com/images/I/81PJaEeHRML._AC_UF894,1000_QL80_.jpg">
-                <img alt="book3" src="https://m.media-amazon.com/images/I/71kdiN5Y1YL._AC_UF1000,1000_QL80_.jpg">
-                </div>
-
-        </div>  
-        <div class="ratings-box"></div>
-        <div class="ratings-container">
-            <p>★★★★</p>
-            <p>★★★★</p>
-            <p>★★★★★</p>
+         <div class="images-container">
+            <img alt="book1" src="https://m.media-amazon.com/images/I/81EVFgsl3jL._UF1000,1000_QL80_.jpg">
+            <p alt="book1">★★★★</p>
+            <p alt="book1">This book rating</p>
+         </div>
+         <div class="images-container">
+            <img alt="book2" src="https://m.media-amazon.com/images/I/81PJaEeHRML._AC_UF894,1000_QL80_.jpg"> 
+            <p alt="book2stars">★★★★</p>
+            <p>This book rating</p>
         </div>
+        <div class="images-container">
+            <img alt="book3" src="https://m.media-amazon.com/images/I/71kdiN5Y1YL._AC_UF1000,1000_QL80_.jpg">
+            <p alt="book2stars">★★★★★</p>
+            <p>This book rating</p>
         </div>
-        <div class="text-box">
-            <div class="text-container">
-            <p> This book is about</p>
-            <p> This book is about</p>
-            <p> This book is about</p>
-            </div>
         </div>
         </main>
         <footer>
             <p> That's it!</p>
           </footer>
+        </body>
         <style>
+            body {
+                background-color:#F6EEE4;
+                height: 100%;
+            }
            main {
             background-color:#F6EEE4;
             background-size: cover;
@@ -63,6 +63,10 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
+           }
+           .book1 {
+            flex: column;
+            text-align: center;
            }
            .background {
             width: 100vw;
@@ -92,42 +96,32 @@
             line-height: 2;
             border: 5px solid #8C7263;
            }  
-           .images-container {
+           .images-box {
               display: flex;
               flex-direction: row;
+              width: 100;
               justify-content: space-evenly; 
               line-height: 2;
             }
+            .images-container {
+                flex-direction: column;
+                text-align: center;
+            }
            a:hover {
-            color: #F6EEE4;
+            color: #573c1c;
            }
-           .ratings-container {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly; 
-            flex-flow: row;
-            font-size: 15px;
-            line-height: 1;
+           p {
             color: #92B496;
-            align-content: center;
+            font-size: 20px;
+            line-height: 1;
            }
            H2 {
             color: #92B496;
             font-size: 30px;
            }
-           .text-container {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly; 
-            flex-flow: row;
-            font-size: 20px;
-            line-height: 1;
-            color: #92B496;
-            align-content: center;
-           }
            footer {
             color: #8C7263
            }
+
         </style>
-    </body>
 </html>
