--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
         <div class="top-header">
             <h1>Julianna's BookClub</h1>
             <div class="nav-container">
-               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/index.html">Contact</a>
-               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/index.html">Home</a>
+               <a href="mailto:padij238@newschool.edu">Contact</a>
+               <a href="index.html">Home</a>
                <a href="https://www.goodreads.com/user/show/152230441-julianna">GoodReads</a>
-               <a href="/Users/juliannapadilla/Desktop/miniproject-3/about.html">About</a>
-               <a href="file:///Users/juliannapadilla/Desktop/miniproject-3/recent-reads.html">Recent Reads</a>
+               <a href="about.html">About</a>
+               <a href="recent-reads.html">Recent Reads</a>
             </div>
             <div class="image"
             <img src=""> 
