--- a/about.html
+++ b/about.html
@@ -16,10 +16,8 @@
                <a href="about.html">About</a>
                <a href="recent-reads.html">Recent Reads</a>
             </div>
-            <div class="image"
-            <img src=""> 
-            </div>
-            <p> Hi! I'm Julianna, an avid reader and fangirl.
+            <div>
+               <p> Hi! I'm Julianna, an avid reader and fangirl.
                 I'm from New York City and spend most of my time 
                 at hockey games, concerts, or at my local bookstore. </p>
             <p>
@@ -28,15 +26,22 @@
                 boyfriend, I’m probably scrolling through Pinterest.  </p>
 
             <p> Listen to my reading playlist!</p>
+
+        </div>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1jT0wKWChMvKEO2eidv2ae?utm_source=generator" width="75%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
             </iframe>
+         </main>
+     </body>
             <style>
+                body {
+                background-color:#F6EEE4;
+                height: 100%; }
                 main {
                     background-color:#F6EEE4;
                     background-size: cover;
                     width: 100%;
                     height: 100vh;
-                   } 
+                   }  
                    .nav-container {
                     background-color:#F6EEE4;
                     text-align: center;
@@ -55,7 +60,7 @@
                     color: #8C7263;
                    }
                    .top-header {
-                    color: #8C7263;
+                    color: #92B496;
                     background-color:#F6EEE4;
                     text-align: center;
                     font-family: "Libre Baskerville";
@@ -77,5 +82,5 @@
            iframe {
             justify-content: center;
            }
-                   </style>
+         </style>
         </div>
