--- a/recent-reads.html
+++ b/recent-reads.html
@@ -18,6 +18,7 @@
             </div>
         </div>
         <p>All the books I've read in 2024!</p>
+        <div>
         <ul class="list">
             <li>Wild Love - Elsie Silver</li>
             <li>Archer's Voice - Mia Sheridan</li>
@@ -38,8 +39,15 @@
              <li>Lost and Lassoed - Lyla Sage</li>
              <li>Unsteady - Peyton Corrine</li>
         </ul>
+        </div>
         <p>Reviews coming soon!</p>
+        </main>
+    </body>
+    <div>
         <style>
+             body {
+                background-color:#F6EEE4;
+                height: 100%; }
         main {
             background-color:#F6EEE4;
             background-size: cover;
@@ -70,7 +78,7 @@
             color: #8C7263;
            }
            .top-header {
-            color: #8C7263;
+            color: #92B496;
             background-color:#F6EEE4;
             text-align: center;
             font-family: "Libre Baskerville";
@@ -80,3 +88,4 @@
             line-height: 0;
            }
            </style>
+           </div>
