--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
                <a href="about.html">About</a>
                <a href="recent-reads.html">Recent Reads</a>
             </div>
+            <img src="images/IMG_9944.jpg">
             <div>
                <p> Hi! I'm Julianna, an avid reader and fangirl.
                 I'm from New York City and spend most of my time 
@@ -58,6 +59,13 @@
                    }
                    a {
                     color: #8C7263;
+                   }
+                   img {
+                    height: 300px;
+                    width: 500px;
+                    justify-content: center;
+                    border: 5px solid #8C7263;
+                    line-height: 2;
                    }
                    .top-header {
                     color: #92B496;
