--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                     line-height: 0;
                    }
                    a:hover {
-            color: #F6EEE4;
+            color: #573c1c;
            }
            p {
             color: #92B496;
@@ -90,5 +90,17 @@
            iframe {
             justify-content: center;
            }
+           @media (max-width: 450px) {
+            .top-header {
+                font-size: 15px;
+            }
+            .nav-container {
+                font-size: 10px;
+            }
+            img {
+                    height: 200px;
+                    width: 300px;
+        }
+    }
          </style>
         </div>
