--- a/recent-reads.html
+++ b/recent-reads.html
@@ -68,9 +68,10 @@
             flex-direction: row;
             justify-content: space-around;
            }
-           a {
-            color: #8C7263;
+           a:hover {
+            color: #573c1c;
            }
+           
            li {
             color: #92B496;
            }
@@ -87,5 +88,16 @@
             font-weight: 700;
             line-height: 0;
            }
+           a {
+            color: #8C7263;
+           }
+           @media (max-width: 450px) {
+            .top-header {
+                font-size: 15px;
+            }
+            .nav-container {
+                font-size: 10px;
+            }
+        }
            </style>
            </div>
